fix spacing on windows

--- a/brettLytle/style.css
+++ b/brettLytle/style.css
@@ -244,7 +244,7 @@ h2 {
 }
 
 .contact-info {
-  width: 220px;
+  width: 240px;
   color: #a5b2c4;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
